Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-12960

Incorrect RowsPassedThrough Metric in Streaming Aggregation

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.4.0
    • Backend
    • None
    • ghx-label-1

    Description

      The logic in grouping aggregation uses the row number of the output batch as the number of the current aggregator returning, however the output batch is shared with other aggregators in streaming aggregation and may not necessarily start at 0 initially, this can result in incorrect numbering and subsequently affect the accuracy of the RowsPassedThrough metric.

      https://github.com/apache/impala/blob/f55077007bf68e6cbeaa15cf270c333af847a1f1/be/src/exec/grouping-aggregator.cc#L519

      Attachments

        Activity

          People

            baggio000 Yida Wu
            baggio000 Yida Wu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: